# Chesster

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  run_tests.py
books/: 8move_balanced.txt  pgn_to_txt_moves.py
include/: attack_masks.h  board.h  evaluate.h  move.h  movegen.h  perft.h  search.h  utils.h
src/: attack_masks.cpp  bitboard.cpp  board.cpp  evaluate.cpp  main.cpp  move.cpp  move_goal.cpp  movegen.cpp  perft.cpp  search.cpp
tests/: perft_pos1.cpp  perft_pos1_d1.cpp  perft_pos1_d2.cpp  perft_pos1_d3.cpp  perft_pos1_d4.cpp  perft_pos1_d5.cpp  perft_pos2_d1.cpp  perft_pos2_d2.cpp  perft_pos2_d3.cpp  perft_pos2_d4.cpp  perft_pos2_d5.cpp  perft_pos3.cpp  perft_pos3_d1.cpp  perft_pos3_d2.cpp  perft_pos3_d3.cpp  perft_pos3_d4.cpp  perft_pos3_d5.cpp  perft_pos4_d1.cpp  perft_pos4_d2.cpp  perft_pos4_d3.cpp  perft_pos4_d4.cpp  perft_pos4_d5.cpp  qperft_pos1_d5.cpp  qperft_pos1_d6.cpp  qperft_pos1_d7.cpp  qperft_pos2_d5.cpp  qperft_pos5_d1.cpp  qperft_pos5_d2.cpp  qperft_pos5_d3.cpp  qperft_pos5_d4.cpp  qperft_pos5_d5.cpp  qperft_pos6_d1.cpp  qperft_pos6_d2.cpp  qperft_pos6_d3.cpp  qperft_pos6_d4.cpp  qperft_pos6_d5.cpp
